--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 			sizes="32x32"
 			href="./images/favicon-32x32.png"
 		/>
-		<link rel="stylesheet" href="/styles.css" />
+		<link rel="stylesheet" href="./styles.css" />
 
 		<title>Frontend Mentor | Article preview component</title>
-		<script defer src="/script.js"></script>
+		<script defer src="./script.js"></script>
 	</head>
 	<body>
 		<main>
 			<img
-				src="/images/drawers.jpg"
+				src="./images/drawers.jpg"
 				alt="Image of drawers with a vase and flowers ontop of it"
 			/>
 			<article>
@@ -73,15 +73,15 @@
 							<p>Share</p>
 							<a href="#"
 								><img
-									src="/images/icon-facebook.svg"
+									src="./images/icon-facebook.svg"
 									alt="Facebook icon" /></a
 							><a href="#"
 								><img
-									src="/images/icon-twitter.svg"
+									src="./images/icon-twitter.svg"
 									alt="Twitter icon" /></a
 							><a href="#"
 								><img
-									src="/images/icon-pinterest.svg"
+									src="./images/icon-pinterest.svg"
 									alt="Pinterest icon"
 							/></a>
 						</div>
