--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				>
 					<div id="article-details" class="article-details">
 						<img
-							src="/images/avatar-michelle.jpg"
+							src="./images/avatar-michelle.jpg"
 							alt="Author, Michelle Appleton"
 						/>
 						<div class="about-article">
